[package]
name = "rayn2d"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.7"
minifb = "0.13"
rayon = "1.2"
smallvec = "0.6"
rand = "0.7"
image = "0.22"
thread_profiler = { version = "0.3", optional = true }

[features]
default = []
profile = ["thread_profiler"]

[profile.release]
debug = true
